Replace enso-ui to liberu-ui

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/enso-ui/select.git"
+    "url": "git+https://github.com/liberu-ui/select.git"
   },
   "keywords": [
     "select",
@@ -19,9 +19,9 @@
   "author": "Adrian Ocneanu <aocneanu@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/enso-ui/select/issues"
+    "url": "https://github.com/liberu-ui/select/issues"
   },
-  "homepage": "https://github.com/enso-ui/select#readme",
+  "homepage": "https://github.com/liberu-ui/select#readme",
   "dependencies": {
     "@liberu-ui/directives": "^2.0",
     "@liberu-ui/dropdown": "^3.0",
